--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 </head>
 <body>
     <p> auto redirect in <span id="countdownREDIRECT"> 5 </span> seconds ... </p>
-    <p><a href="webTree/homepage/index.html" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
+    <p><a href="webTree/homepage" style="color: cadetblue;">&gt;&gt; Redirect manually ...</a></p>
 </body>
 </html>
