--- a/webTree/funstuff/index.html
+++ b/webTree/funstuff/index.html
@@ -48,7 +48,7 @@
             <a class="active" href="javascript:alert('[ i ]  you are currently on this subpage !!')" title="[ i ] you are here"> funSTUFF </a>
             <a href="../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
                 <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
                 <p class="headMENUarrow"> &lt;&lt; funSTUFF -- </span> </p>
@@ -103,9 +103,9 @@
                 </div>
                 <div class="borderLINE" style="float: left; height: 75%;"> </div>
                 <p class="paragraphMARGIN" style="padding-top: 15px; padding-left: 15px">
-                    welcome to the fun zone! <br>
+                    welcome to the funSTUFF! <br>
                     here are links where you can listen or watch <br>
-                    from our pre-made library.. we hope you'll like 'em! <br> <br>
+                    from our pre-made library.. I hope you'll like 'em! <br> <br>
                 </p>
                 <div class="textBORDERin" style="width: 250px;">
                     <div class="borderLINEin" style="float: left; height: 70%"> </div>
@@ -113,7 +113,7 @@
                         <a href="../404"> [ &gt; ] video & movies&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
                         <a href="imagesGIFs"> [ &gt; ] images & GIFs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
                         <a href="../404"> [ &gt; ] soundtracks&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
-                        <a href="playGround"> [ &gt; ] playGround&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
+                        <a href="playGround"> [ &gt; ] <span class="gradRAINBOW gradRUBY noHoverEFF">playGround</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... </a> <br>
                     </p>
                 </div>
                 <p style="text-align: right; padding-top: 10px; padding-right: 15px">
