--- a/webTree/homepage/featuredPosts/index.html
+++ b/webTree/homepage/featuredPosts/index.html
@@ -39,7 +39,7 @@
             <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
             <p class="headMENUarrow"> &lt;&lt; featuredPAGE -- </span> </p>
             <p class="headSubTXTscroll01" style="opacity: 0%;"> displaying only featured posts (introduction, special, etc.) .. </p>
@@ -114,7 +114,7 @@
                         steamMAIN&nbsp;&nbsp;::&nbsp;<span><a href="https://steamcommunity.com/profiles/76561198875120471" onclick="audioWARN(); return confirm('[ 9 ]  certifiedBAKA\n[ ? ]  do you really want to open this link ?')" target="_blank">@sub2pew</a></span> <br>
                     </p>
                 </div>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew" target="_blank"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/sub2pew"> [&gt;] open user profile.. </a> </span> </p>
             </div>
             
             <div class="textBORDER" style="float: left; width: 550px;">
@@ -139,7 +139,7 @@
                     I like listening to electronic and I like talking to people who are interested in creativity, just like me. <br> <br>
                     My goal is - I want to become a programmer!
                 </p>
-                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur" target="_blank"> [&gt;] open user profile.. </a> </span> </p>
+                <p style="text-align: right; padding-top: 10px; padding-right: 15px"> <span> <a href="../../profiles/cumgur"> [&gt;] open user profile.. </a> </span> </p>
             </div>
         </div>
     </div>
