--- a/webTree/profiles/chigurh/index.html
+++ b/webTree/profiles/chigurh/index.html
@@ -41,7 +41,7 @@
             <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
                 <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
                 <p class="headMENUarrow"> &lt;&lt; profilePAGE -- </span> </p>
@@ -99,7 +99,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW" style="color: white;">@chigurh</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW">@chigurh</a>
                                 <span class="toolTIPtxt" style="margin-left: -80px"> premium-member </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -136,7 +136,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW" style="color: white;">@chigurh </a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW">@chigurh </a>
                                 <span class="toolTIPtxt" style="margin-left: -80px"> premium-member </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
@@ -167,7 +167,7 @@
                     <p style="color: gray">
                         <span style="color: cornflowerblue;">
                             <span class="toolTIP">
-                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW" style="color: white;">@chigurh</a>
+                                <a href="javascript:window.location.href=window.location.href" class="gradRAINBOW">@chigurh</a>
                                 <span class="toolTIPtxt" style="margin-left: -80px"> premium-member </span>
                             </span>
                         </span> ::  <span class="postDate toolTIP">
