--- a/webTree/profiles/index.html
+++ b/webTree/profiles/index.html
@@ -183,7 +183,7 @@
             <a href="../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
             <p class="headMENUarrow"> &lt;&lt; profilesDB -- </span> </p>
             <p class="headSubTXTscroll01" style="opacity: 0%;"> now viewing: members of [9] certifiedBAKA </p>
@@ -323,7 +323,7 @@
                         <p style="color: gray">
                             <span style="color: cornflowerblue;">
                                 <span class="toolTIP">
-                                    <a href="chigurh" class="gradRAINBOW" style="color: white;">@chigurh</a>
+                                    <a href="chigurh" class="gradRAINBOW">@chigurh</a>
                                     <span class="toolTIPtxt" style="margin-left: -80px"> premium-member </span>
                                 </span>
                         </p>
