--- a/webTree/profiles/sub2pew/[old] index.html
+++ b/webTree/profiles/sub2pew/[old] index.html
@@ -40,7 +40,7 @@
             <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
             <div class="headSubMENU headSubMenuGRAD">
                 <p class="headMENUarrow"> &lt;&lt; profilePAGE -- </span> </p>
