--- a/webTree/profiles/sub2pew/animeTitleLOG/index.html
+++ b/webTree/profiles/sub2pew/animeTitleLOG/index.html
@@ -45,7 +45,7 @@
             <a href="../../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
                 <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
                 <p class="headMENUarrow"> &lt;&lt; profilePAGE -- </span> </p>
