--- a/webTree/404/index.html
+++ b/webTree/404/index.html
@@ -98,7 +98,7 @@
             font-size: 16px;
             
             border-radius: 10px;
-            margin-top: -5px;;
+            margin-top: -5px;
         }
 
         .buttonMAIN:hover {
