--- a/webTree/funstuff/imagesGIFs/index.html
+++ b/webTree/funstuff/imagesGIFs/index.html
@@ -98,7 +98,7 @@
             <a class="active" href=".." title=">> funSTUFF"> funSTUFF </a>
             <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD">
                 <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
                 <p class="headMENUarrow"> &lt;&lt; funSTUFF -- </span> </p>
