--- a/webTree/profiles/cumgur/index.html
+++ b/webTree/profiles/cumgur/index.html
@@ -41,7 +41,7 @@
             <a href="../../../webTree/funstuff" title=">> funSTUFF"> funSTUFF </a>
             <a href="../../about" title=">> aboutPage"> aboutPage </a>
         </div>
-        <div class="headSubMENU" title="[ i ] liveSTATUS">
+        <div class="headSubMENU headSubMenuGRAD" title="[ i ] liveSTATUS">
             <div class="headSubMENU headSubMenuGRAD"></div>
                 <p id="headMENUtime" class="headMENUtime"> [dateTime] </p>
                 <p class="headMENUarrow"> &lt;&lt; profilePAGE -- </span> </p>
